# Black_box_modeling

./: .gitignore  README.md  Tabnet1.ipynb  pyproject.toml  submission.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.2a94ddfe-c37df48e-398870da-8716a4f6.tmp
config/: config.py
libs/data_loader/: data_loader.py
libs/nn/: baseline_model.py
libs/plots/: __init__.py  plot_helpers.py
libs/preprocesing/: feature_selection.py
notebook/: Untitled.ipynb  apply_power_transform.ipynb  catboost.ipynb  inspect_features.ipynb  predict_with_baseline_model.ipynb  tabnet.ipynb  test_data_module.ipynb  train_baseline_model.ipynb
test/: apply_power_transform.py  compare_submissions.py  inspect_features.py  predict_and_submit.py  predict_with_baseline_model.py  select_features.py  tabnet.py  test_data_module.py  train_baseline_model.py
