[tool.poetry]
name = "black-box-modeling"
version = "0.1.0"
description = ""
authors = ["Junhyun Shin <hl1sqi@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
nbconvert = "^7.16.4"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
catboost = "^1.2.6"
numpy = "1.26.4"
lightgbm = "^4.5.0"
optuna = "^4.0.0"
torch = "~2.2"
pytorch-tabnet = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
